--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Birthday</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
-    <main>
+    <main class="s1">
         <h2>Palindrome Birthday</h2>
         <input type="date" id="bday-input"/>
         <button id="show-btn">Show</button>
         <p id="result"></p>
+        <div class="c1">
+        <lottie-player src="https://assets10.lottiefiles.com/private_files/lf30_y0mCTl.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay></lottie-player>
+        </div>
+        
     </main>
     </body>
     <script src="main.js"></script>
